Enhance Owl Carousel navigation styles for better alignment and display

--- a/s/a/adil/css/owl.css
+++ b/s/a/adil/css/owl.css
@@ -176,6 +176,18 @@
   transition: opacity 400ms ease;
 }
 
+.owl-prev {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+.owl-next {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
 .owl-carousel .owl-item img.owl-lazy {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
