Update service titles to use paragraph tags for improved semantics

--- a/s/a/adil/css/main.css
+++ b/s/a/adil/css/main.css
@@ -2372,7 +2372,7 @@ img {
 	margin-bottom: 15px;
 }
 
-.service-block .inner-box h5 a {
+.service-block .inner-box h5 p {
 	position: relative;
 	font-weight: 600;
 	color: #010101;
